--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -2,16 +2,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy
+    image: reverseproxy:kubiat/reverseproxy:v1
   backend_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user
+    image: udagram-api-user:kubiat/udagram-api-user:v1
   backend_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed
+    image: udagram-api-feed:kubiat/udagram-api-feed:v1
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend:local
+    image: udagram-frontend:kubiat/udagram-frontend:v1
