--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,22 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: "cimg/node:14.17.0"
+      - image: "cimg/node"
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: npm install
+      - run:
+          name: Install Docker Compose
+          environment:
+            COMPOSE_VERSION: "1.29.2"
+          command: |
+            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+      - setup_remote_docker:
+          docker_layer_caching: false
       - run:
           name: Build using `docker-compose`
           command: |
