--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: "cimg/node"
+      - image: "cimg/node:14.17.0"
     steps:
       - checkout
       - run:
