chore: remove rogue tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Build using `docker-compose`
           command: |
-            docker-compose -f docker-compose-build.yml build
+            docker-compose -f docker-compose-build.yml build --parallel
       - run:
           name: Login for Docker Hub
           command: |
