--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -3,7 +3,7 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy:kubiat/reverseproxy
+    image: reverseproxy
   backend_user:
     build:
       context: ./udagram-api-user
