--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -7,12 +7,12 @@ services:
   backend_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user:kubiat/udagram-api-user:v1
+    image: udagram-api-user
   backend_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed:kubiat/udagram-api-feed:v1
+    image: udagram-api-feed
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend:kubiat/udagram-frontend:v1
+    image: udagram-frontend
