--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: kubiat/reverseproxy
+      image: kubiat/reverseproxy:v1
       ports:
           - 8080:8080
       restart: always
@@ -9,7 +9,7 @@ services:
         - backend-user
         - backend-feed
   backend-user:
-    image: kubiat/udagram-api-user
+    image: kubiat/udagram-api-user:v1
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
@@ -21,7 +21,7 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   backend-feed:
-    image: kubiat/udagram-api-feed
+    image: kubiat/udagram-api-feed:v1
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
@@ -35,6 +35,6 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   frontend:
-    image: kubiat/udagram-frontend
+    image: kubiat/udagram-frontend:v1
     ports:
       - "8100:80"
