--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
       #       curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
       #       chmod +x ~/docker-compose
       #       sudo mv ~/docker-compose /usr/local/bin/docker-compose
-      # - setup_remote_docker:
-      #     docker_layer_caching: false
+      - setup_remote_docker:
+          docker_layer_caching: false
       # - run:
       #     name: Build using `docker-compose`
       #     command: |
