--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             docker build -t udagram-api-feed ./udagram-api-feed
             docker build -t udagram-api-user ./udagram-api-user
             docker build -t udagram-frontend ./udagram-frontend
-            docker build -t reverseproxy ./reverseproxy
+            docker build -t reverseproxy ./udagram-reverseproxy
       - run:
           name: Tag Images
           command: |
